# cpp_debug_tools

./: .gitignore  CMakeLists.txt  README.md  ROS_INTEGRATION_GUIDE.md  comprehensive_test  comprehensive_test.cpp  constructor_test  constructor_test.cpp  debug_containers.hpp  example  example.cpp  example_memory_monitor.cpp  final_example  final_example.cpp  real_ros_example.cpp  ros_integration_example  ros_integration_example.cpp  simple_ros_example  simple_ros_example.cpp  simple_test  simple_test.cpp
docs/: MEMORY_DEBUG_GUIDE.md  NANOFLANN_MEMORY_MONITOR.md  NANOFLANN_MEMORY_MONITOR_GUIDE.md  NANOFLANN_MEMORY_MONITOR_README.md  NANOFLANN_MONITOR_GUIDE.md  README.md  ROS_INTEGRATION_GUIDE.md
examples/: example.cpp  example_memory_monitor.cpp  memory_debug_example.cpp  monitored_kdtree_example.cpp  monitored_nanoflann_example.cpp  nanoflann_auto_monitor_example.cpp  nanoflann_memory_monitor_example.cpp  nanoflann_memory_watch_example.cpp  nanoflann_monitor_example.cpp  real_nanoflann_memory_example.cpp  simple_integration_example.cpp
include/memory/: nanoflann_kdtree_limited.hpp  nanoflann_memory_monitor.hpp  nanoflann_memory_monitor_impl.hpp  nanoflann_memory_watcher.hpp  nanoflann_monitor.hpp  nanoflann_monitor_wrapper.hpp  nanoflann_monitored_index.hpp
include/memory/container_debug/: debug_containers.hpp
include/memory/nanoflann_debug/: README.md  nanoflann_memory_monitor.hpp
test/: debug_containers_test.cpp  monitored_nanoflann_test.cpp  nanoflann_memory_monitor_test.cpp  nanoflann_watcher_test.cpp  real_nanoflann_memory_test.cpp
test/basic/: auto_context_test.cpp  caller_context_test.cpp  file_line_test.cpp  function_name_test.cpp  simple_test.cpp
test/comprehensive/: comprehensive_test.cpp  final_example.cpp
test/constructor/: constructor_test.cpp
test/ros_integration/: real_ros_example.cpp  ros_integration_example.cpp  simple_ros_example.cpp
